--- a/index.css
+++ b/index.css
@@ -193,8 +193,19 @@ margin: 38px 0 38px 25;
     transform: translate(-0% -100%);    
 }
 
-
-
+/* least container */
+.latest_h{
+    font-weight: bold;
+    font-size: 3rem;
+}
+.latest_p{
+    font-size: 1.375rem;
+    margin-top: 16px;
+}
+.latest{
+    text-align: center;
+    margin-top: 130px;
+}
 
 
 
@@ -311,6 +322,10 @@ color:#E95A08 ;
 .hide{
     display: none;
 }
+/* least container */
+
+
+
 
 
 
