--- a/index.css
+++ b/index.css
@@ -206,8 +206,57 @@ margin: 38px 0 38px 25;
     text-align: center;
     margin-top: 130px;
 }
+/* image section */
 
 
+
+
+
+
+
+
+
+/* image section */
+
+
+/* last section */
+.last_section{
+    width: 100%;
+    height: 530px;
+     background-image: url(./assets/news-letter-bg.png);
+    background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.join_h2{
+    font-size: 3rem;
+    font-weight: bold;
+    background-color:transparent;
+    color: white;
+
+}
+.input_section{
+    width: 830px;
+    height: 50px;
+   display: flex;
+   justify-content: center;
+}
+.input_email{
+    width: 634px;
+    height: 50px;
+    padding-left: 20px;
+}
+.input_btn{
+    width: 160px;
+    height: 55px;
+    background-color: rgb(233, 90, 8);
+    color: white;
+    border: none;
+}
 
 
 /* Shared  */
@@ -322,11 +371,33 @@ color:#E95A08 ;
 .hide{
     display: none;
 }
-/* least container */
+/* imaghe section */
 
 
 
 
 
+
+
+
+
+/* image section */
+
+/* last section */
+.input_section{
+    display: flex;
+    flex-direction: row;
+    width: 320px;
+    margin: 0 auto;
+}
+.join_h2{
+    font-size: 1.25rem;
+    font-weight: bold;
+} 
 
   }
+
+
+
+
+
