--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
     padding: 0;
 }
 .bg{
-    background-color: rgb(245, 248, 255);
+    background-color: #F5F8FF;
 }
 header{
     margin-top: 30px;
